--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,19 @@
 {
-	"name":"esterm/mpwarfwk-standard-edition",
+	"name":"esterm/mpwarfwk",
 	"description":"Standard APP using MPWAR Framework",
 	"license":"Apache-2.0",
 	"keywords": [],
 	"homepage":"https://github.com/esterm/mpwarfwk",
 	"type":"project",
-	"repositories": [
-	{
-		"type":"vcs",
-		"url":"https://github.com/esterm/mpwarfwk"
-	}
-	],
+
 	"require": {
 		"php":">=5.3.2"
 
 	},
 	"minimum-stability":"dev",
 	"autoload": {
-		"psr-4": {
-		"":"src/"
+		"psr-0": {
+		"Mpwarfwk\\":"src/"
 		}
 	}
 }
