--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 "description": "MPWAR Framework",
 "license": "Apache-2.0",
 "keywords": [],
-"homepage": "https://github.com/pablor/mpwarfwk",
+"homepage": "https://github.com/esterm/mpwarfwk",
 "type": "project",
 "require": {
 "php": ">=5.3.2",
